// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewFormStarItem component snapshot Should correctly render ReviewFormStarItem component (active) 1`] = `
Array [
  <input
    checked={true}
    className="form__rating-input visually-hidden"
    id="5-star"
    name="rating"
    onChange={[Function]}
    type="radio"
    value={5}
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="5-star"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height={33}
      width={37}
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;

exports[`ReviewFormStarItem component snapshot Should correctly render ReviewFormStarItem component (default) 1`] = `
Array [
  <input
    checked={false}
    className="form__rating-input visually-hidden"
    id="5-star"
    name="rating"
    onChange={[Function]}
    type="radio"
    value={5}
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="5-star"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height={33}
      width={37}
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;
